feature/dev4 fixed bugs with chatroom and names

--- a/client/src/app/components/lobby/lobby.component.html
+++ b/client/src/app/components/lobby/lobby.component.html
@@ -11,8 +11,12 @@
           type="text" 
           [(ngModel)]="newUsername" 
           placeholder="New username" 
+          maxlength="24" 
           (keyup.enter)="changeUsername()"
         >
+        <div class="char-counter" [ngClass]="{'near-limit': newUsername.length > 20}">
+          {{ newUsername.length }}/24
+        </div>
         <button (click)="changeUsername()">Save</button>
         <button (click)="showChangeUsername = false">Cancel</button>
       </div>
@@ -28,11 +32,20 @@
         <div 
           class="user-item" 
           *ngFor="let user of users"
+          [ngClass]="{'current-user': user.username === username}"
           (contextmenu)="openUserMenu($event, user)"
         >
           <span class="status-dot" [ngClass]="{'online': user.status === 'online', 'in-game': user.status === 'in-game'}"></span>
-          <span class="username">{{ user.username }}</span>
+          <span class="username" [title]="user.username">
+            {{ user.username }}
+            <span *ngIf="user.username === username" class="current-user-tag">(You)</span>
+          </span>
           <span class="user-status">{{ user.status === 'online' ? 'Available' : 'In Game' }}</span>
+          <button 
+            class="action-button" 
+            (click)="openUserMenu($event, user)" 
+            [disabled]="user.username === username || user.status !== 'online'"
+          >⋮</button>
         </div>
       </div>
     </div>
@@ -76,4 +89,4 @@
       </div>
     </div>
   </div>
-</div><p>lobby works!</p>
+</div>
