--- a/client/src/app/components/lobby/lobby.component.html
+++ b/client/src/app/components/lobby/lobby.component.html
@@ -89,4 +89,7 @@
       </div>
     </div>
   </div>
+  
+  <!-- Add the connection dialog component -->
+  <app-connection-dialog></app-connection-dialog>
 </div>
