feature/dev4 you can now distinguish your own name

--- a/client/src/app/components/lobby/lobby.component.html
+++ b/client/src/app/components/lobby/lobby.component.html
@@ -55,7 +55,10 @@
         <div 
           class="message-item" 
           *ngFor="let message of messages"
-          [ngClass]="{'system-message': message.type === 'system'}"
+          [ngClass]="{
+            'system-message': message.type === 'system',
+            'my-message': message.username === username
+          }"
           (contextmenu)="message.username !== 'System' && message.username !== username ? openUserMenu($event, { username: message.username, status: 'online' }) : null"
         >
           <div class="message-header">
