feature/dev10 rescaled game room, as well as added Format JSON feature in the configuration setup page

--- a/client/src/app/components/setup-config/setup-config.component.html
+++ b/client/src/app/components/setup-config/setup-config.component.html
@@ -16,7 +16,10 @@
 
     <!-- JSON configuration textarea -->
     <div class="json-section">
-      <h3>JSON Configuration</h3>
+      <div class="json-header-row">
+        <h3>JSON Configuration</h3>
+        <button class="format-json-btn" (click)="formatJson()">Format JSON</button>
+      </div>
       <textarea
         [(ngModel)]="jsonConfig"
         (ngModelChange)="onConfigChange()"
